<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Reminders in Location</string>
    <string name="no_data">I hope you do not forget anything\nbecause you have no reminder.\n\nWhat about to add some?</string>
    <string name="reminder_title">Reminder title</string>
    <string name="reminder_location_name">Location name</string>
    <string name="reminder_desc">Description</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation_message">Do you really want to logout?</string>
    <string name="delete_account_title">Delete your account?</string>
    <string name="delete_account_all_reminders_title">Do you really want to delete all reminders?</string>
    <string name="delete_account_all_reminders_description">All reminders will be deleted and Geofences removed.\n\nTHIS ACTION CAN NOT BE UNDONE.</string>
    <string name="delete_all_reminders_deleted_format">%s reminders have been deleted.</string>
    <string name="delete_no_reminders_deleted_format">No reminders have been deleted.</string>
    <string name="delete_reminder_title">Delete reminder?</string>
    <string name="delete_account_confirmation_message">Do you really want to delete your account?</string>
    <string name="delete_reminder_confirmation_message">Do you really want to delete this reminder?</string>
    <string name="welcome_to_the_location_reminder_app">Location Reminder</string>
    <string name="welcome_message_caption">Set your mind free to what matters most and do the things at the right time and place.</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f - Long: %2$.5f</string>
    <string name="dropped_pin">Set a reminder for this place</string>
    <string name="settings">Settings</string>
    <string name="check_permission">Check permissions</string>
    <string name="geofence_added">Geofence added</string>
    <string name="geofence_removed">Geofence removed</string>
    <string name="geofence_batch_removal">All Geofences removed</string>
    <string name="text_button_select_location">Select location</string>
    <string name="action_click_on_the_map">Click on the map</string>
    <string name="text_button_change_location">Change location</string>
    <string name="action_set_location">Get this location</string>
    <string name="message_click_on_the_map">Click anywhere on the map or any point of interest to select a location.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings > Location > Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="text_login">Login</string>
    <string name="text_sign_in_with_google">Sign in with Google</string>
    <string name="text_sign_in_with_email">Sign in with email</string>
    <string name="text_terms_of_service">Terms of Service</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_terms_of_service_and_privacy_policy">Terms of Service and Privacy Policy</string>
    <string name="url_terms_of_service">https://jesselima.dev/apps/location-reminder/terms-of-service</string>
    <string name="url_privacy_policy">https://jesselima.dev/apps/location-reminder/privacy-policy</string>
    <string name="auth_error_not_network">Please, check your net work connection.</string>
    <string name="auth_error_something_went_wrong">Oooops! Something went wrong!</string>
    <string name="auth_error_must_update_google_services">Please, update your google services to be able to proceed.</string>
    <string name="auth_error_account_disable">The user account has been disabled by an administrator.</string>
    <string name="auth_error_email_does_not_match_provided">You are attempting to sign in a different email than previously provided</string>
    <string name="auth_error_email_mismatch">You are attempting to sign in a different email than previously provided</string>
    <string name="auth_error_invalid_email_link">You are attempting to sign in with an invalid email link</string>
    <string name="auth_error_please_enter_email">Please enter your email to continue signing in</string>
    <string name="auth_error_wrong_device">You must open the email link on the same device.</string>
    <string name="auth_error_define_linking_or_sign_in">You must determine if you want to continue linking or complete the sign in</string>
    <string name="auth_error_session_expired_or_cleared">The session associated with this sign-in request has either expired or was cleared</string>
    <string name="auth_account_deleted">Your account have been deleted!</string>
    <string name="add_new_reminder">New reminder</string>
    <string name="update_reminder">Update reminder</string>
    <string name="title_activity_on_boarding">OnBoarding</string>
    <string name="content_description_save_reminder">Save reminder</string>
    <string name="label_copyright">Copyrights</string>
    <string name="label_delete_account">Delete account</string>
    <string name="label_delete_all_reminders">Delete all reminders</string>
    <string name="label_delete_all_reminders_confirmation">Yes, Delete all.</string>
    <string name="label_source">Source</string>
    <string name="label_author">Author</string>
    <string name="label_cancel">Cancel</string>
    <string name="attention">Attention</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="label_ok_got_it">OK, got it!</string>
    <string name="image_or_animation_resource">Image or animation resource</string>
    <string name="label_go_back_to_reminders">Go back to reminders</string>
    <string name="label_success">Success</string>
    <string name="onboard_step_1_title">Need remember something?</string>
    <string name="onboard_step_1_description">Have you forgot to do something while you was in some place?</string>
    <string name="onboard_step_2_title">No worries!</string>
    <string name="onboard_step_2_description">Here you can select a location and save your reminder.</string>
    <string name="onboard_step_3_title">And get notified when you are in place.</string>
    <string name="onboard_step_3_description">Now you can save you reminders location based and get notified when you get into or leave the place!</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="map_local_style_dark">Style Dark</string>
    <string name="map_local_style_night">Style Night</string>
    <string name="map_local_style_night_highway_highlighted">Night yellow highway</string>
    <string name="map_local_style_standard_highway_highlighted">Day blue highway</string>
    <string name="message_saving_reminder_error">Ooops! Error saving reminder.</string>
    <string name="message_saving_reminder_success">Reminder saved!</string>
    <string name="message_input_error_title">Please, check the title.</string>
    <string name="message_input_error_location">Please, check the location.</string>
    <string name="message_input_error_description">Please, check the description.</string>
    <string name="message_input_error_lat_long_missing">Did you selected the location on the map?</string>
    <string name="message_loading_reminder_error">Ooops! Error loading reminders!</string>
    <string name="message_no_reminders_found">Ooops! No reminders have been found.</string>
    <string name="message_update_reminder_error">Ooops! Error updating reminder!</string>
    <string name="message_update_reminder_status_error">Ooops! Error updating reminder status.</string>
    <string name="message_update_reminder_success">Reminder updated!</string>
    <string name="message_update_reminder_success_format">Reminder updated! %s</string>
    <string name="message_update_reminder_error_review">Geofence status not changed. Please, Check device location and location permission.</string>
    <string name="message_geofence_not_added_check_device_location_permission">Geofence not added. Please, Check device location or permission.</string>
    <string name="message_geofence_not_added_it_need_enable_manually">Geofence disabled for this reminder. You need to manually enable it later.</string>
    <string name="message_delete_reminder_success">Reminder deleted!</string>
    <string name="message_delete_reminder_error">Error deleting reminder!</string>
    <string name="message_get_reminder_error">Error getting reminder info!</string>
    <string name="message_reminder_details_error">Error getting reminder details!</string>
    <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now</string>
    <string name="geofence_error">Geofence error: %s</string>
    <string name="geofence_error_generic_info">Geofence error: %s</string>
    <string name="notification_default_button">See reminder</string>
    <string name="message_permission_background_location_title">Background location permission needed</string>
    <string name="message_permission_background_location_description">Please, set Background Location Permission to \'Allow all the time\' to get geofence alerts.\n\nYou can save the reminder without geofence and setup it later from the reminder list.</string>
    <string name="message_permission_location_description">Please, set Location Permission to \'Allow all the time\' to get geofence alerts.</string>
    <string name="message_permission_location_title">Location permission needed</string>
    <string name="message_request_background_location_description_q_or_later">The App needs to access the background location to properly show location based alerts.\n\nPlease, click on SETTINGS > Permissions > Location > Allow All the time.</string>
    <string name="message_request_background_location_description_q_or_later_short">The App needs to access the background location to properly show location based alerts.</string>
    <string name="message_request_background_location_description">The App needs to access the location to properly show location based alerts.\n\nPlease, click on SETTINGS > Permissions > Location.</string>
    <string name="message_request_background_location_description_short">The App needs to access the location to properly show location based alerts.</string>
    <string name="message_show_map_location">To show your location on the map you need to allow location permission. You can select your position on the map manually if you wish.</string>
    <string name="geofence_error_background_permission_required">Background permission required.</string>
    <string name="geofence_error_geofence_not_available">Geofence not available</string>
    <string name="geofence_error_too_many_geofence_request">Too frequent geofences requests</string>
    <string name="geofence_error_too_many_geofences">Too many geofences</string>
    <string name="geofence_error_something_went_wrong">Something went wrong with geofence.</string>
    <string name="label_enter_lowercase">enter</string>
    <string name="label_exit_lowercase">exit</string>
    <string name="notification_title">New Location Reminder</string>
    <string name="notification_description">%1s alert: %2s - %3s.</string>
    <string name="message_authentication_required">Authentication required!</string>
    <string name="enable_it">Enable it</string>
    <string name="device_location_is_disabled_title">Device location is disabled.</string>
    <string name="device_location_is_disabled_description_map_view">If you need the App to get your current location you nee to enable device location.</string>
</resources>