<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/selectLocationLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/selectLocationAppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/textColorPrimary">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/selectLocationToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:importantForAccessibility="yes"
                app:layout_collapseMode="none"
                app:navigationContentDescription="@string/label_go_back_to_reminders"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:menu="@menu/map_options"
                app:title="@string/text_button_select_location"
                app:titleTextColor="@color/solidWhite" />

        </com.google.android.material.appbar.AppBarLayout>

        <!-- Linear progress indicator -->
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/loadingMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectLocationAppBarLayout" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/reminderMapFragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectLocationAppBarLayout"
            tools:context=".features.RemindersActivity" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonGetSelectedLocation"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height_default"
            android:layout_marginStart="@dimen/margin_button_large"
            android:layout_marginEnd="@dimen/margin_button_large"
            android:layout_marginBottom="@dimen/spacing_xl"
            tools:enabled="true"
            android:enabled="false"
            android:text="@string/action_click_on_the_map"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewHowToSetLocation"
            style="@style/TextAppearance.LocationReminderAppTheme.Body.Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:background="@drawable/background_rounded_semi_transparent_grey"
            android:gravity="center"
            android:padding="@dimen/spacing_md"
            android:text="@string/message_click_on_the_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectLocationAppBarLayout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/mapDeviceLocationStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_md"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHowToSetLocation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_medium">

                <TextView
                    android:id="@+id/mapDeviceLocationStatusTitle"
                    style="@style/TextAppearance.LocationReminderAppTheme.Body.Medium"
                    android:layout_width="@dimen/none"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_small"
                    android:layout_marginEnd="@dimen/spacing_sm"
                    android:textColor="@color/solidBlack"
                    android:text="@string/device_location_is_disabled_title"
                    app:layout_constraintEnd_toStartOf="@+id/mapButtonDeviceLocation"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/mapDeviceLocationStatusDescription"
                    style="@style/TextAppearance.LocationReminderAppTheme.Body.Small"
                    android:layout_width="@dimen/none"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorSecondary"
                    android:layout_marginEnd="@dimen/spacing_sm"
                    android:text="@string/device_location_is_disabled_description_map_view"
                    app:layout_constraintEnd_toStartOf="@+id/mapButtonDeviceLocation"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/mapDeviceLocationStatusTitle"
                    app:layout_constraintTop_toBottomOf="@id/mapDeviceLocationStatusTitle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mapButtonDeviceLocation"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_it"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/mapDeviceLocationStatusDescription"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/mapDeviceLocationStatusTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
