<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/solidWhite">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/saveReminderAppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/textColorPrimary">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/saveReminderToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:importantForAccessibility="yes"
                app:layout_collapseMode="none"
                app:navigationContentDescription="@string/label_go_back_to_reminders"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/add_new_reminder"
                app:titleTextColor="@color/solidWhite" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldReminderTitle"
            style="@style/Widget.LocationReminderAppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_md"
            android:hint="@string/reminder_title"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveReminderAppBarLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reminderTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLength="100"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldReminderLocationName"
            style="@style/Widget.LocationReminderAppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_md"
            android:hint="@string/reminder_location_name"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldReminderTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reminderLocationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:maxLength="100"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldReminderDescription"
            style="@style/Widget.LocationReminderAppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_marginEnd="@dimen/spacing_md"
            android:hint="@string/reminder_desc"
            app:counterEnabled="true"
            app:counterMaxLength="300"
            app:expandedHintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldReminderLocationName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reminderDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:maxLength="200"
                android:maxLines="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSelectLocation"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_select_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animationSelectLocation" />

        <TextView
            android:id="@+id/textSelectedLocation"
            style="@style/TextAppearance.LocationReminderAppTheme.Body.Default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_md"
            android:gravity="center"
            android:textColor="@color/textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSelectLocation" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationSelectLocation"
            android:layout_width="@dimen/lottie_default_width"
            android:layout_height="@dimen/lottie_default_width"
            android:layout_marginTop="@dimen/spacing_md"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldReminderDescription"
            app:lottie_autoPlay="false"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/animation_location_select"
            tools:background="@color/colorStateOn"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/actionButtonSaveReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_screen_default"
            android:src="@drawable/ic_save"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/content_description_save_reminder" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_margin="@dimen/spacing_md"
            android:padding="@dimen/spacing_tiny"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
